@@ -1,7 +1,7 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
 <model name="mercenary" usescaleof="height" >
   <submodels>
-    <submodel mesh="malebuilder.mesh" >
+    <submodel mesh="3d_skeletons/gen_humanoid/malebuilder/malebuilder.mesh" >
       <parts>
         <part name="Body" show="true" >
           <subentities>
@@ -25,27 +25,27 @@
         </part>
         <part name="Boxers" show="false" >
           <subentities>
-            <subentity name="boxers" material="Malebuilder/Dress/Dark_rags" />
+            <subentity name="boxers" material="/global/clothes/dress/dark_rags" />
           </subentities>
         </part>
         <part name="Cloak" show="false" >
           <subentities>
-            <subentity name="cloak" material="Malebuilder/Dress/Dark_rags" />
+            <subentity name="cloak" material="/global/clothes/dress/dark_rags" />
           </subentities>
         </part>
 	<part name="Pants" show="true" >
           <subentities>
-            <subentity name="pants" material="Malebuilder/Dress/Dark_rags" />
+            <subentity name="pants" material="/global/clothes/dress/dark_rags" />
           </subentities>
         </part>      
         <part name="Shirt" show="true" >
           <subentities>
-            <subentity name="shirt" material="Malebuilder/Dress/Dark_rags" />
+            <subentity name="shirt" material="/global/clothes/dress/dark_rags" />
           </subentities>
         </part>  
         <part name="ShirtTuckedLongSleeve" show="false" >
           <subentities>
-            <subentity name="shirt/tucked_long_sleeve" material="Malebuilder/Dress/Dark_rags" />
+            <subentity name="shirt/tucked_long_sleeve" material="/global/clothes/dress/dark_rags" />
           </subentities>
         </part>      
       </parts>      
