@@ -1,10 +1,15 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
 <model name="pig">
   <submodels>
-    <submodel mesh="pig.mesh" >
+    <submodel mesh="3d_skeletons/pig/pig.mesh" >
       <parts>
-        <part name="Pig" show="true" >
+        <part name="main" show="true" >
       </parts>
     </submodel>
   </submodels>
+  <Actions>
+	<Action name="walk">
+		<animationpart name="Walk" weight="1" />
+	</Action> 
+  </Actions>
 </model>
