@@ -1,9 +1,9 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
 <model name="birch" usescaleof="height"  >
   <submodels>
-    <submodel mesh="Straight_up_tree.mesh" >
+    <submodel mesh="3d_objects/plants/tree/models/Straight_up_tree/Straight_up_tree.mesh" >
       <parts>
-        <part name="Tree" show="true" >
+        <part name="main" show="true" >
       </parts>
     </submodel>
   </submodels>
